--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.7",
+    "sass": "^1.77.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
